Update h1 to clamped font sizing

--- a/style.css
+++ b/style.css
@@ -91,9 +91,10 @@ main {
 }
 
 h1 {
-  font-size: 4rem;
-  width: max(30%, 20rem);
-  padding-bottom: 2rem;
+  font-size: clamp(3rem, 17vw, 4rem);
+    width: max(30%, 20rem);
+    padding-bottom: 2rem;
+    max-width: 90vw;
 }
 
 
